--- a/src/stock_agent/templates/login.html
+++ b/src/stock_agent/templates/login.html
@@ -32,6 +32,7 @@
                 color: #555;
             }
             input[type="text"],
+            input[type="email"],
             input[type="password"] {
                 width: 100%;
                 padding: 10px;
