--- a/src/stock_agent/templates/stocks.html
+++ b/src/stock_agent/templates/stocks.html
@@ -246,7 +246,7 @@
         });
     </script>
 
-    <!-- HTMX Firebase Auth Integration -->
-    <script type="module" src="/static/js/htmx-firebase-auth.js"></script>
+    <!-- Firebase Authentication -->
+    <script type="module" src="/static/js/firebase-auth.js"></script>
 </body>
 </html>
